# Kassandra

./: .gitignore  README.md  config.json
Payload_Type/Kassandra/: Dockerfile  main.py  rabbitmq_config.json  requirements.txt
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/: Cargo.toml  build.rs
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/src/: checkin.rs  config.rs  ekko.rs  main.rs  tasking.rs  transport.rs
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/src/asm/: hellsasm.asm
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/src/features/: download.rs  executeBOF.rs  executeDOT.rs  exit.rs  filesystem.rs  list_processes.rs  pivot.rs  pong.rs  psw.rs  socks.rs  upload.rs
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/src/hellshall/: mod.rs
Payload_Type/Kassandra/Kassandra/agent_code/kassandra/src/selfprotect/: mod.rs
Payload_Type/Kassandra/Kassandra/agent_functions/: builder.py  download.py  executeBOF.py  executeDOT.py  exit.py  filesystem.py  ping.py  pivot.py  ps.py  psw.py  upload.py
Payload_Type/Kassandra/translator/: translator.py
